--- a/Changelog.txt
+++ b/Changelog.txt
@@ -2,10 +2,19 @@ Changelog by Chinmay Modi, 200901039
 Preferably known as V3rG1L
 
 TODO:
+Create the described heuristic
 Improve my heuristic for better scores
 Test on a wider range of levels so that I can get better heuristic
 Read papers of previous competitions to make a better heuristic
 Try to add a learning heuristic that can replay a level multiple times and improve its own score
+
+Version 1.2:
+
+17 November 2014
+
+Added another strategy
+This one implements a weight calculation based on type of bird, type and orientation of block, etc.
+But seems to show not much improvements.
 
 Version 1.1:
 
